assert(CompilerOracle::option_matches_type(option, value)) failed: Value must match option type

XMLWordPrintable

    • b14

      Reproduce: java -XX:CompileCommand=option,Test::test,TestOptionDouble,3.14 -version

      Symptom:
      ```
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/jvm/jdk/src/hotspot/share/compiler/compilerOracle.cpp:288), pid=9522, tid=9523
      # assert(CompilerOracle::option_matches_type(option, value)) failed: Value must match option type
      #


      Stack: [0x00007f2d7f481000,0x00007f2d7f582000], sp=0x00007f2d7f57ff50, free space=1019k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x9afef4] void register_command<bool>(TypedMethodOptionMatcher*, CompileCommand, bool)+0xb4
      V [libjvm.so+0x9b2667] CompilerOracle::parse_from_line(char*)+0x6e7
      V [libjvm.so+0x9b3f13] compilerOracle_init()+0xa3
      V [libjvm.so+0xd4b083] init_globals()+0x93
      V [libjvm.so+0x17d8874] Threads::create_vm(JavaVMInitArgs*, bool*)+0x284
      V [libjvm.so+0xec5149] JNI_CreateJavaVM+0x99
      C [libjli.so+0x3eaa] JavaMain+0x8a
      C [libjli.so+0x77f9] ThreadJavaMain+0x9
      ```

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: