8263353: assert(CompilerOracle::option_matches_type(option, value)) failed: Value must match option type